# rlar_foraging_pub

./: CMakeLists.txt  README.md  package.xml
argos_worlds/: doublewall.argos  foraging.argos  foraging_23456.argos  obstaclefield.argos  singlewall.argos  template.argos
msg/: Observation.msg
plugin/: CMakeLists.txt
plugin/tensor_swarm_bot/: CMakeLists.txt  client.cpp  client.h  footbot_foraging.cpp  footbot_foraging.h  foraging_loop_functions.cpp  foraging_loop_functions.h  id_qtuser_functions.cpp  id_qtuser_functions.h  shared_queue.hpp
run/: foraging.bash  run.sh
save/: mdn2L_32x5x2_32x5x2_32x3x2_128_5_256_500_mse_0.0001_0.01202.h5  mdn2L_32x5x2_32x5x2_32x3x2_32_1_256_500_mse_0.0001_0.01174.h5  mdn_32x5x2_32x5x2_32x3x2_256_2_256_500_mse_0.0001_0.01286.h5
scripts/: ArgosForagingEnvironment.py  ArgosForagingEnvironment.py.bk  DQNAgent.py  ForagingExp.py  HoffAgent.py  SumTree.py  band_plot.py  cumavg.py  distributions.py  logger.py  mdn.py  multi_band_plot_multi_source.py  per_memory.py  tensorboard_logging.py  tf_util.py  train_rehearsal_mdn.py  utils.py  winsum.py
srv/: AIService.srv
